--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Workshop By Sarveshwaran</title>
+    <title>Workshop By Kavya GJ</title>
     <link rel="shortcut icon" href="copyright.svg" type="image/svg">
     <link rel="icon" href="copyright.svg" type="image/svg">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
@@ -48,8 +48,8 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>  Your Name </h1>
-            <h2> Email Address </h2>
+            <h1> Kavya GJ </h1>
+            <h2> kavyagj21@gmail.com </h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -73,16 +73,11 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat
-                        laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget
-                        efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et
-                        tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo
-                        tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In
-                        consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non
-                        leo.
-                    </p>
+                        Hey,I am Kavya GJ currently persuing my engineeering in svce.
+                        I am from CSE branch and doing 4th Sem as of now.
+                        Just tried to create my firt online "Portfolio" using "GitHb".
+                        This is my sample portfolio.
+                     </p>
                 </div>
             </div>
         </div>
@@ -92,33 +87,27 @@
     <div id="experience" class="background-alt">
         <h2 class="heading dark-yellow">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="June 2018 – September 2019">
+                <h3>Kavya Gj</h3>
+                <h4>Web Developer</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat
-                    laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur
-                    libero. Morbi dapibus porta quam laoreet placerat.
+                   I have learnt how to create web page using html  and my own portfolio using GitHub.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="September 2019 – January 2020">
+                <h3>Kavya GJ</h3>
+                <h4>Web Developer</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat
-                    laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur
-                    libero. Morbi dapibus porta quam laoreet placerat.
+                     I a created web page using html  and my own portfolio using GitHub.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="January 2020 – May 2020">
+                <h3>Kavya GJ</h3>
+                <h4>Web Developer</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat
-                    laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur
-                    libero. Morbi dapibus porta quam laoreet placerat.
+                     I Succesfully created my own "Portfolio" and hosted it using "GitHub".
                 </p>
             </div>
         </div>
@@ -128,34 +117,16 @@
     <div id="education">
         <h2 class="heading dark-yellow">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Sri Venkateshwara Colloge Of Engineering </h3>
+            <span class="education-date">Sept 2018 - May 2020</span>
+            <h4>Bachelor of Science in Computer Science Engineering</h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet
-                urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi
-                dapibus porta quam laoreet placerat.
+                 I am currently doing my 4th sem of Engineerring.
             </p>
         </div>
         <!-- End .education-block -->
 
-        <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-            </ul>
-        </div>
-        <!-- End .education-block -->
+       
     </div>
     <!-- End #education -->
 
@@ -171,9 +142,8 @@
                     <div class="project-info">
                         <h3>Project Name Here</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam
-                            volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce
-                            eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                             Hey i am currently working on building my own website.
+                           
                         </p>
                         <a href="#">View Project</a>
                     </div>
@@ -189,9 +159,7 @@
                     <div class="project-info">
                         <h3>Project Name Here</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam
-                            volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce
-                            eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                             Hey my name is Kavya and i am an web developer.
                         </p>
                         <a href="#">View Project</a>
                     </div>
@@ -242,7 +210,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2020 SARVESHWARAN
+                        Copyright &copy; 2020 KAVYA GJ
                     </p>
                 </div>
                 <div class="col-sm-2 top">
